# Thesis-Webscraper

./: .env.example  Changelog.md  MIGRATING.md  README.md  USAGE.md  dotenv.env  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: posts.py  seen_texts.py
docs/: Thesis-Abstract  Thesis-Abstract-Chinese-Version  data_schema.md  ethics.md  thesis_context.md  usage.md
src/: Thesis Code (v2).py  Thesis Code.py  _init_.py  app.py  browser.py  cli.py  list_crawler.py  logging setup.py  retry.py  run_metadata.py  settings.py
src/thesis_webscraper/: __main__.py  browser.py  cli.py  config.py  fetch.py  list_crawler.py  logging_setup.py  models.py  pipeline.py  scraper.py
tests/: conftest.py  test_extractor.py  tests.py
tests/fixtures/: thread_full.html  thread_no_comments.html  thread_no_paragraph.html
workflows/: ci.yml
